--- a/Backend/3.1 Express Setup/package.json
+++ b/Backend/3.1 Express Setup/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
@@ -13,6 +13,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
   }
