--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# Dependencies
+# dependencies 
 node_modules
 **/node_modules
-**/**/node_modules 
+**/**/node_modules
 
-#generated content
 pnpm-lock.yaml
 **/pnpm-lock.yaml
-**/**pnpm-lock.yaml
+**/**/pnpm-lock.yaml
